--- a/PrimeNumbersCalculatorGP.csproj
+++ b/PrimeNumbersCalculatorGP.csproj
@@ -63,6 +63,7 @@
     <Compile Include="IXMLresultSaver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XMLResultRetriver.cs" />
     <Compile Include="XMLResultSaver.cs" />
     <EmbeddedResource Include="FrmCalculator.resx">
       <DependentUpon>FrmCalculator.cs</DependentUpon>
